# MariaKids

./: .gitignore  Makefile  README.md  pyproject.toml
client/: .eslintrc.cjs  .prettierrc.json  index.html  package.json  tailwind.config.js  vite.config.js
client/src/: App.vue  main.js  style.css
client/src/components/: ChildrenItem.vue  MainBase.vue
client/src/components/Base/: BaseItem.vue
client/src/components/Navigation/: AppNavigation.vue
client/src/router/: index.js
client/src/stores/: useChildrenArtWorks.js  useLessonNotes.js  useParentConsultations.js  useProjectActivities.js
client/src/views/: AboutView.vue  ChildrenArtworksView.vue  ContactView.vue  HomeView.vue  LessonNotesView.vue  LoginView.vue  ParentConsultationsView.vue  ProjectActivitiesView.vue
prisma/: schema.prisma
src/: main.py
src/api/ChildrenArtworks/: crud.py  data_loader.py  models.py
src/api/LessonNotes/: crud.py  data_loader.py  models.py
src/api/ParentConsultations/: crud.py  data_loader.py  models.py
src/api/ProjectActivities/: crud.py  data_loader.py  models.py
src/auth/: auth.py  crud.py
src/server/: web_routes.py
